unpackaged/main/default/objects/GTM_Ticket_Snapshot__c/GTM_Ticket_Snapshot__c.object-meta.xml
<CustomObject>
    <description>GTM Ticket Snapshot object used to capture original tickets values at the start of each sprint.</description>
    <label>GTM Ticket Snapshot</label>
    <nameField>
        <label>GTM Ticket Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GTM Ticket Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>