unpackaged/main/default/objects/GTM_Ticket_Snapshot__c/fields/GTM_Ticket__c.field-meta.xml
<CustomField>
    <fullName>GTM_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GTM Ticket</label>
    <referenceTo>GTM_Ticket__c</referenceTo>
    <relationshipLabel>GTM Ticket Snapshots (GTM Ticket)</relationshipLabel>
    <relationshipName>GTM_Ticket_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>