unpackaged/main/default/objects/GTM_Ticket_Snapshot__c/fields/Parent_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Ticket</label>
    <referenceTo>GTM_Ticket__c</referenceTo>
    <relationshipLabel>GTM Ticket Snapshots (Parent Tickets)</relationshipLabel>
    <relationshipName>GTM_Ticket_Snapshot_Parents</relationshipName>
    <type>Lookup</type>
</CustomField>