unpackaged/main/default/objects/GTM_Ticket_Snapshot__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GTM_Ticket_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>