unpackaged/main/default/objects/GTM_Ticket_Snapshot__c/fields/Sprint_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Start_Date__c</fullName>
    <formula>IF(
    ISBLANK(TEXT(Estimated_Sprint__c)),
    null,
    DATEVALUE(LEFT(
        MID(
            TEXT(Estimated_Sprint__c),
            FIND(&quot;: &quot;, TEXT(Estimated_Sprint__c)) + 2,
            FIND(&quot; /&quot;, TEXT(Estimated_Sprint__c)) - FIND(&quot;: &quot;, TEXT(Estimated_Sprint__c)) - 2
        ),
        10
    ))
)</formula>
    <label>Sprint Start Date</label>
    <type>Date</type>
</CustomField>