unpackaged/main/default/objects/GTM_Ticket_Snapshot__c/fields/Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Story_Points__c</fullName>
    <label>Story Points</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GTM_Ticket_Story_Points</valueSetName>
    </valueSet>
</CustomField>