unpackaged/main/default/objects/GTM_Ticket_Snapshot__c/fields/Ticket_Name__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Name__c</fullName>
    <label>Ticket Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>